﻿[B]1.0.4[/B]
- Forrás változás követése (bejelentkezés)
[B]1.0.3[/B]
- Cím kinyerésének módosítása
[B]1.0.2[/B]
- Leia BugFix
[B]1.0.1[/B]
- BugFix
[B]1.0.0[/B]
- RTL Most átnevezve RTL+-ra